Add consent data and FEPs to the Consents tab (#479)