@@ -104,7 +104,7 @@ public class IndustryCaseProcessingController {
 
     var caseProcessingTabs = caseProcessingTabService.getIndustryTabsAvailableToUser(user, applicationVersion);
     if (tab == null && !caseProcessingTabs.isEmpty()) {
-      tab = caseProcessingTabs.get(0);
+      tab = caseProcessingTabs.getFirst();
     }
 
     var modelAndView = new ModelAndView("fcs/application/industryCaseProcessing")
@@ -123,7 +123,7 @@ public class IndustryCaseProcessingController {
 
     if (tab != null && caseProcessingTabs.contains(tab)) {
       switch (tab) {
-        case CONSENT -> consentTabService.addConsentTabContentToModelAndView(application, modelAndView);
+        case CONSENT -> consentTabService.addConsentTabContentToModelAndView(applicationVersion, modelAndView);
         case PAYMENTS -> paymentsTabService.addPaymentsTabContentToModelAndView(applicationVersion, modelAndView);
         case VIEW_APPLICATION -> applicationSummaryService.addSummarySectionsToModelAndView(applicationVersion, modelAndView);
         default -> {
